# alsgls

./: CITATION.cff  CLAUDE.md  README.md  README.template.md  als_sur.ipynb  pyproject.toml
.github/: README.md
.github/scripts/: process_readme.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml
als_sim/: als_comparison.ipynb  als_sur.ipynb
als_sim/lowrank_gls/: __init__.py  als_solver.py  calibration.py  core.py  diagnostics.py  numerics.py
alsgls/: __init__.py  _validation.py  als.py  api.py  em.py  lsqr_gls.py  metrics.py  ops.py  sim.py
benchmarks/: compare_sur.py
docs/: .gitignore  README.template.md
docs/source/: als_vs_em.md  als_vs_em.rst  changelog.md  changelog.rst  conf.py  contributing.md  contributing.rst  examples.md  examples.rst  index.md  index.rst  mathematical_background.md  mathematical_background.rst  quickstart.md  quickstart.rst
docs/source/_snippets/: basic_usage.md  installation.md  performance_table.md  synopsis.md
docs/source/api/: alsgls.md  alsgls.rst
examples/: compare_als_vs_em.py
tests/: test_als.py  test_api.py  test_beta_step_nll_decreases_when_lamB_zero.py  test_cg_small.py  test_e2e.py  test_end_to_end.py  test_identities.py  test_lowrank_gls.py  test_lsqr_gls.py  test_metrics.py  test_ops.py  test_ops_and_metrics.py  test_rotation_invariance.py  test_scale_correction.py  test_scale_derivative_zero_at_cstar.py  test_simulation.py  test_trace_is_nonincreasing_after_sweep_fix.py
