[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alsgls"
version = "0.3.0"
description = "Lightweight low-rank+diag GLS/SUR via ALS with EM baseline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gaurav Sood", email = "contact@gsood.com" }]
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/finite-sample/alsgls" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy>=1.0"]
lsqr = ["scipy>=1.0"]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "ipython",
]

[tool.setuptools]
packages = ["alsgls"]
