[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "alsgls"
version = "0.3.0"
description = "Lightweight low-rank+diag GLS/SUR via ALS with EM baseline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gaurav Sood", email = "contact@gsood.com" }]
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/finite-sample/alsgls" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy>=1.0"]
lsqr = ["scipy>=1.0"]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "ipython",
]


[tool.hatch.build.targets.wheel]
packages = ["alsgls"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.7.0", "mypy>=1.0", "pre-commit>=3.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "als_sim",  # exclude notebooks
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E741",  # ambiguous variable names
    "B008",  # do not perform function calls in argument defaults
    "B023",  # function definition does not bind loop variable
    "B904",  # raise exceptions with from err or from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
