[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "alsgls"
version = "1.0.0"
description = "Type-safe lightweight low-rank+diagonal GLS/SUR solver via ALS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gaurav Sood", email = "contact@gsood.com" }]
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/finite-sample/alsgls" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy>=1.0"]
lsqr = ["scipy>=1.0"]
pandas = ["pandas>=1.0"]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints",
  "myst-parser>=2.0",
]


[tool.uv.build-backend]
module-root = "."

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.7.0", "mypy>=1.0", "pre-commit>=3.0", "deptry>=0.12.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.deptry]
# Ignore files/directories that aren't part of the main package
exclude = [
    "als_sim/",          # Jupyter notebooks with experimental code
    "benchmarks/",       # Benchmarking scripts with optional deps
    "tests/",           # Test files
    "docs/",            # Documentation
    ".venv/",           # Virtual environment
    "venv/",            # Alternative virtual environment name
    "build/",           # Build artifacts
    "dist/",            # Distribution files
]

# These are used by tools, not directly imported in Python code
extend_exclude = [
    "docs/source/conf.py",       # Sphinx config uses docs dependencies
]

# Ignore specific dependency issues
[tool.deptry.per_rule_ignores]
# pytest is used by pytest runner, not imported directly
# Docs dependencies used by Sphinx, not imported in Python
DEP002 = ["pytest", "pytest-cov", "sphinx", "furo", "sphinx-autodoc-typehints", "myst-parser"]

# pandas is optional - used only when available
DEP003 = ["pandas"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "als_sim",  # exclude notebooks
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E741",  # ambiguous variable names
    "B008",  # do not perform function calls in argument defaults
    "B023",  # function definition does not bind loop variable
    "B904",  # raise exceptions with from err or from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
